fixes: grid gap row was removed and now the searchbar bug its completely fixed

--- a/css/main.css
+++ b/css/main.css
@@ -174,15 +174,16 @@ body {
 }
 
 .cards {
-    margin-top: 40px;
+    margin-top: 10px;
     display: grid;
-    grid-gap: 3.5rem;
+    grid-gap: 0 3.5rem;
     grid-template-columns: repeat(auto-fit, minmax(21rem, 1fr));
     grid-auto-flow: dense;
     justify-items: center;
 }
 
 .card {
+    margin: 1.8rem 0;
     padding: 18px;
     /* display: block; */
     width: 21rem;
@@ -550,7 +551,7 @@ li p {
     font-weight: 500;
     font-family: 'Inter', sans-serif;
     font-size: 1rem;
-    transition: 150ms cubic-bezier(0.4,0,0.2,1);
+    transition: 250ms cubic-bezier(0.4,0,0.2,1);
 }
 
 label {
@@ -770,7 +771,7 @@ footer {
 
 
 
-.filter {
+.filter {        
     display: none;
 }
 
